@startuml
'https://plantuml.com/class-diagram
'left to right direction

class Figure
class Video
class Picture
class Category
class Comment
class User
class ResetPasswordToken
class RegisterToken
Figure::$videos "1" -- "*" Video : Contient >
Figure::$pictures "1" -- "*" Picture : Contient >
Figure::$category "*" -- "1" Category : Appartient >
Figure::$comments "1" -- "*" Comment : Contient >
Comment::$author "*" -- "1" User : Est rédigé par >
ResetPasswordToken::$user "0..1" -- "1" User : Valide pour >
RegisterToken::$user "0..1" -- "1" User : Valide pour >


class Figure {
    $id : int
    $name : string
    $description : string
    $creationDate : DateTime
    $modificationDate : DateTime
    $category : Category
    $comments : Comment[]
    $videos : Video[]
    $pictures : Picture[]
}

class Category {
    $id : int
    $description : string
}

class Video {
    $id : int
    $figure : Figure
    $url : string
}

class Picture {
    $id : int
    $figure : Figure
    $url : string
}

class User {
    $id : int
    $pseudo : string
    $mailAddress : string
    $password : string
    $creationDate : DateTime
    $isVerified : boolean
}


class ResetPasswordToken {
    $id : int
    $user : User
    $token : string
    $creationDate : DateTime
    $validityDate : DateTime
}

class RegisterToken {
    $id : int
    $user : User
    $token : string
    $creationDate : DateTime
    $validityDate : DateTime
}

class Comment {
    $id : int
    $author : User
    $figure : Figure
    $creationDate : DateTime
    $content : string
}

@enduml
